# Raft-Consensus-Key-Value-Store

./: CMakeLists.txt  LICENSE  README.md
include/kvstore/: Command.hpp  KVStore.hpp
include/raft/: InMemoryRPC.hpp  Log.hpp  RaftNode.hpp  RaftPersistence.hpp  RaftRPC.hpp  gRPCRaftClient.hpp  gRPCRaftService.hpp
proto/: raft.proto
src/: CMakeLists.txt  raft_client.cpp  raft_main.cpp
src/kvstore/: Command.cpp  KVStore.cpp
src/raft/: InMemoryRPC.cpp  Log.cpp  RaftNode.cpp  RaftPersistence.cpp  gRPCRaftClient.cpp  gRPCRaftService.cpp
tests/: CMakeLists.txt
tests/kvstore/: kvStore_test.cpp
tests/raft/: test_automatic_snapshot.cpp  test_command.cpp  test_kvstore_integration.cpp  test_log.cpp  test_raft_cluster.cpp  test_raft_node.cpp  test_snapshot.cpp
